packages/ui/LastFMViewer.module.css
.lfmvCard a {
	color: inherit;
	text-decoration: inherit;
}

.lfmvCard,
.lfmvCard img,
.lfmvCard figure,
.lfmvCard div {
	animation: born-animate 0.5s ease-in-out alternate;
}

@keyframes born-animate {
	from {
		scale: 0.98;
		opacity: 0.2;
		translate: 0 -2%;
	}
	to {
		opacity: 1;
		scale: 1;
		translate: 0 0;
	}
}

.lfmvCard {
	font-family: "Inter Variable";
	line-height: 1.5;
	font-weight: 500;
	font-size: 16px;

	scrollbar-width: thin;
	scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
	scrollbar-gutter: stable;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;

	& * {
		scrollbar-width: thin;
		scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
		scrollbar-gutter: stable;
		box-sizing: border-box;
	}
	&::-webkit-scrollbar {
		width: 1px;
		height: 2px;
	}
	&::-webkit-scrollbar-track {
		background: transparent;
		background: none;
		width: 1px;
		height: 2px;
	}

	&::-webkit-scrollbar-thumb {
		background-color: rgba(255, 255, 255, 0.5);
		width: 1px;
		height: 2px;
		border-radius: 5px;
	}

	@apply glass relative mx-auto box-border flex h-full w-full flex-col justify-between overflow-y-auto rounded-lg p-4 shadow-xl ring-2 ring-slate-950/5;

	figure {
		@apply mx-auto mb-2 h-auto w-1/2 overflow-hidden rounded-lg border-inherit;

		img {
			@apply block h-full w-full overflow-hidden object-cover align-middle;
		}
	}

	.cardBody {
		@apply flex h-min flex-col gap-1 drop-shadow-lg filter;
	}

	.titleSkeleton {
		@apply mx-auto h-3 w-1/2;
	}

	.trackTitle {
		font-size: clamp(1rem, 3vmin, 1.5rem);
		@apply mb-0 mt-1 text-center font-black sm:mx-auto;
	}

	.infoSpan {
		font-size: clamp(0.6rem, 2vmin, 1rem);
		@apply flex items-center justify-center gap-1;
	}
}

